--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -54,7 +54,7 @@
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/sega-europe-limited/job/oMLBafw2'>SEGA Europe Limited Careers - Business Intelligence Analyst</a></h5> 
+<h5><a href='http://jobs.jobvite.com/sega-europe-limited/job/oMLBafw2'>SEGA Europe Limited Careers - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -102,7 +102,7 @@ Internet Solutions Corporation.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sumup/jobs/4367385002'>Job Application for Business Intelligence Analyst at SumUp</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4367385002'>Job Application for Business Intelligence Analyst at SumUp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -127,7 +127,7 @@ Cover) at Paymentsense.</p>
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Business Intelligence Analyst at Verve.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fooda.applytojob.com/apply/AeXbGSCmMn/Business-Intelligence-Analyst'>Business Intelligence Analyst - Fooda - Career Page</a></h5> 
+<h5><a href='http://fooda.applytojob.com/apply/AeXbGSCmMn/Business-Intelligence-Analyst'>Business Intelligence Analyst - Fooda - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -160,7 +160,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light">Redwood City, CARedwood City, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/omaze/jobs/4367960002'>Job Application for Director, Business Intelligence at Omaze</a></h5> 
+<h5><a href='https://boards.greenhouse.io/omaze/jobs/4367960002'>Job Application for Director, Business Intelligence at Omaze</a></h5> 
 <p><span class="badge badge-light">Los Angeles Los Angeles California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -246,11 +246,11 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light">Seattle Seattle San Francisco New York London Mumbai</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/logix/jobs/1782486'>Job Application for Business Intelligence Developer at Logix Federal Credit Union</a></h5> 
+<h5><a href='https://boards.greenhouse.io/logix/jobs/1782486'>Job Application for Business Intelligence Developer at Logix Federal Credit Union</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999691641639-business-intelligence-analyst'>Adevinta Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999691641639-business-intelligence-analyst'>Adevinta Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -267,7 +267,7 @@ Solutions Architect to design and build the firm's Data Warehouse and Business?.
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/opentable/jobs/4365000002'>Job Application for Principal Business Intelligence Developer at OpenTable</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/opentable/jobs/4365000002'>Job Application for Principal Business Intelligence Developer at OpenTable</a></h5> 
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -275,7 +275,7 @@ Solutions Architect to design and build the firm's Data Warehouse and Business?.
 <p><span class="badge badge-light">Texas, United States</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://paltron1.join.com/jobs/249776-consultant-business-intelligence-m-w-d'>Job @ PALTRON (Herten): Consultant Business Intell... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://paltron1.join.com/jobs/249776-consultant-business-intelligence-m-w-d'>Job @ PALTRON (Herten): Consultant Business Intell... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>vor 3 Tagen ... PALTRON GmbH has a job opening for Consultant Business Intelligence (m/w/d) 
 in Herten (published: 12.07.2019). Apply now or check the other available jobs.</p>
@@ -355,7 +355,7 @@ Technologies Inc.</p>
 reporting infrastructure and visualisation to the next level. BI touches every part of
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/j2cloudservices/job/oVWE9fwo'>j2 Cloud Services Careers - Team Lead, Business Intelligence</a></h5> 
+<h5><a href='https://jobs.jobvite.com/j2cloudservices/job/oVWE9fwo'>j2 Cloud Services Careers - Team Lead, Business Intelligence</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -383,7 +383,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/imperva/job/oX4oafwj'>Imperva Careers - Business Intelligence Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/imperva/job/oX4oafwj'>Imperva Careers - Business Intelligence Engineer</a></h5> 
 <p><span class="badge badge-light">Redwood City California</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -465,7 +465,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/mediacom-emea/job/ou1yafwX'>MediaCom Careers - Business Intelligence Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/mediacom-emea/job/ou1yafwX'>MediaCom Careers - Business Intelligence Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
